更改首页字体，完善footer

--- a/ux/index.html
+++ b/ux/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>菅野千寻</title>
+    <title>一个神秘的网站-菅野千寻的秘密基地</title>
   </head>
   <body>
     <div id="app"></div>
