路由器懒加载，组件懒加载，部分图片懒加载

--- a/ux/index.html
+++ b/ux/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>一个神秘的网站-菅野千寻的秘密基地</title>
   </head>
-  <body>
+  <body v-lazy:backgroung-img="bgImg">
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
